# FSE4AI

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_api.py  test_gradcam.py  test_model.py  test_preprocess.py  test_real_image.py
tinyvision/: app.py  gradcam.py  init.py  main.py  model.py  ui.py
