[project]
name = "tinyvision"
version = "0.1.0"
description = "Lightweight image classification web app with MobileNetV3-Small and Grad-CAM (FastAPI + Gradio)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "torch>=2.2",
  "torchvision>=0.17",
  "pillow>=10.3",
  "numpy>=1.26",
  "gradio>=4.44",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27", "black>=24.3", "ruff>=0.6"]

[project.scripts]
tinyvision = "tinyvision.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"